--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ tokio = { version = "1.42.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["cors", "fs"] }
 uuid = { version = "1.3.1", features = ["serde", "v4"] }
 multipart = "0.18.0"
+jsonwebtoken = "9.3.0"
+cookie = "0.18.1"
+bcrypt = "0.16.0"
